---------------------------------------------------------------------------------------------------
Version: 1.1.42
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.41
Date: 2025-01-31
  Changes:
    - Rename give_all_packs_in_vanilla_lab to ensure_all_packs_from_vanilla_lab.
---------------------------------------------------------------------------------------------------
Version: 1.1.40
Date: 2025-01-31
  Changes:
    - New API: give_all_packs_in_vanilla_lab.
---------------------------------------------------------------------------------------------------
Version: 1.1.39
Date: 2025-01-31
  Changes:
    - Improve error message for specifying an orbit with a parent that doesn't exist.
---------------------------------------------------------------------------------------------------
Version: 1.1.38
Date: 2025-01-31
  Changes:
    - New helper: PlanetsLib.technology_icon_constant_planet.
---------------------------------------------------------------------------------------------------
Version: 1.1.37
Date: 2025-01-30
  Changes:
    - Updated the orbit image Python script to better center satellites on their orbit line.
---------------------------------------------------------------------------------------------------
Version: 1.1.36
Date: 2025-01-29
  Changes:
    - New APIs for management of science inputs in labs.
---------------------------------------------------------------------------------------------------
Version: 1.1.35
Date: 2025-01-27
  Changes:
    - borrow_music no longer copies hero tracks unless the `planet` field matches the source planet, matching the same behavior as other tracks.
---------------------------------------------------------------------------------------------------
Version: 1.1.34
Date: 2025-01-25
  Changes:
    - Fixed the size of the sun being slightly increased whilst PlanetsLib is installed.
  Locale:
    - Chinese update.