@@ -1,3 +1,26 @@
+for _, type in pairs({ "space-location", "planet" }) do
+	for _, location in pairs(data.raw[type]) do
+		if
+			not (
+				location.orbit
+				and location.orbit.parent
+				and location.orbit.distance
+				and (location.orbit.orientation or location.orbit.distance == 0)
+			)
+		then
+			-- This has no effect on PlanetsLib itself, as we use the position and orientation directly in data-final-fixes.
+			location.orbit = {
+				parent = {
+					type = "space-location",
+					name = "star",
+				},
+				distance = location.distance,
+				orientation = location.orientation,
+			}
+		end
+	end
+end
+
 -- Disabled as the vanilla orbits are sufficient:
 -- data.raw["planet"]["vulcanus"].orbit.sprite = {
 -- 	type = "sprite",
